# fast-krc20

./: .gitignore  Cargo.toml  README.md
src/: args.rs  client.rs  main.rs  wallet.rs
