[package]
name = "fast-krc20"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.16"
futures = "0.3.30"
tokio = { version ="1.39.3", features = ["full"]}
tonic = "0.12.2"
kaspa-wallet-keys = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-wallet-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-bip32 = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
kaspa-consensus-client = { git = "https://github.com/kaspanet/rusty-kaspa.git", branch = "master"}
anyhow = "1.0.89"
secp256k1 = "0.29.1"
num-bigint = "0.4.6"


[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
name = "fast-krc20"
path = "src/main.rs"
